--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id="scores">See High Scores</div>
 
-        <div id="timer">Time Remaining:</div>
+        <div id="timer">Timer</div>
 
     </header>
 
@@ -25,8 +25,10 @@
     <p id="objective">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolore quaerat veritatis, odit ut
         eos distinctio! Eaque ratione itaque natus.</p>
 
-    <button id="start">Get Started!</button>
+    <button id="startBtn">Get Started!</button>
 
+
+    <script src="script.js"></script>
 
 </body>
 
