--- a/indexBS.html
+++ b/indexBS.html
@@ -30,12 +30,16 @@
 
     </div>
 
-    <div id="start">
-        <button type="button" class="btn btn-success btn-lg">Get Started!</button>
+    <div id="button">
+        <button id = "startBtn" type="button" class="btn btn-success btn-lg">Get Started!</button>
     </div>
 
 
     <!-- Optional JavaScript -->
+
+    <script src="script.js"></script>
+
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
