--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
     <title>Code Quiz</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
-    <header>
 
-        <div id="scores">See High Scores</div>
+    <div id="scores">See High Scores</div>
 
-        <div id="timer">Timer</div>
-
-    </header>
-
+    <div id="timer">Timer</div>
 
     <h1 id="title">JS Coding Challenge</h1>
 
     <p id="objective">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolore quaerat veritatis, odit ut
         eos distinctio! Eaque ratione itaque natus.</p>
 
-    <button id="startBtn">Get Started!</button>
+    <div id="button">
+        <button id="startBtn">Get Started!</button>
+    </div>
 
 
     <script src="script.js"></script>
