--- a/indexBS.html
+++ b/indexBS.html
@@ -19,19 +19,20 @@
 <body>
     <div id="scores">See High Scores</div>
 
-    <div id="timer">Time Remaining:</div>
+    <div id="timer">Timer</div>
 
     <div id="questions">
 
         <h1 id="title">JS Coding Challenge</h1>
 
-            <p id="objective">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolore quaerat veritatis, odit ut
+        <p id="objective">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolore quaerat veritatis, odit
+            ut
             eos distinctio! Eaque ratione itaque natus.</p>
 
     </div>
 
     <div id="button">
-        <button id = "startBtn" type="button" class="btn btn-success btn-lg">Get Started!</button>
+        <button id="startBtn" type="button" class="btn btn-success btn-lg">Get Started!</button>
     </div>
 
 
