--- a/indexBS.html
+++ b/indexBS.html
@@ -19,15 +19,13 @@
 <body>
     <div id="scores">See High Scores</div>
 
-    <div id="timer">Timer</div>
+    <h3 id="timer">Timer</h3>
 
     <div id="questions">
 
         <h1 id="title">JS Coding Challenge</h1>
 
-        <p id="objective">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolore quaerat veritatis, odit
-            ut
-            eos distinctio! Eaque ratione itaque natus.</p>
+        <p id="objective">Answer the following questions about JavaScript fundamentals. Try to finish before the timer runs out. Good Luck!</p>
 
     </div>
 
